--- a/Bootstrap4/conFusion/css/styles.css
+++ b/Bootstrap4/conFusion/css/styles.css
@@ -56,3 +56,9 @@ body {
 #reservationModal {
   color: #000000;
 }
+#carouselButton {
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
+}
